--- a/http/package.json
+++ b/http/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
+    "dev": "nodemon --inspect server.js",
     "api": "nodemon api/index.js"
   },
   "keywords": [],
